<resources>
    <string name="app_name">ShiftSwap</string>
    <string name="title_activity_after_login">AfterLogin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Charnpreet Singh</string>
    <string name="nav_header_subtitle">101811258@student.swin.edu.au</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="left">View Availabiliy</string>
    <string name="right">Enter Availability</string>
    <string name="textview" />
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="nd">ND</string>
    <string name="list_of_avialable_users">List of Avialable users</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_emp_No">Enter your Employee NO</string>
    <string name="sign_up_enter_your_email_address">Enter your email Address</string>
    <string name="sign_up_enter_your_password">Enter Your Password</string>
    <string name="enter_your_employee_no">enter your employee no</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="next">Next</string>
    <string name="un_avai">UN.Avai</string>
    <string name="enter">Enter</string>
    <string name="avaialble_user_profile_pic">Avaialble user profile Pic</string>
    <string name="contact">Contact</string>
    <string name="backarrow">TODO</string>
    <string name="fragment_back_arrow">TODO</string>
    <string name="availability">Availability</string>
    <string name="swap_shift">Swap-Shift</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="profile_back_arrow">back_arrow</string>
    <string name="profile_image">profile_image</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_current_password">Enter your current Password</string>
    <string name="enter_your_new_password">Enter your New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="save">Save</string>
    <string name="logging_in">logging in</string>
    <string name="enter_your_email_address">enter_your_email_address</string>
    <string name="change_profile_image">Change Image</string>
    <string name="send">send</string>
    <string name="write_your_message_here">write your message here</string>
</resources>
