<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/availability"
            android:icon="@mipmap/avilability"
            android:title="@string/availability" />
        <item
            android:id="@+id/swapshift"
            android:icon="@mipmap/swapshift"
            android:title="@string/swap_shift" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/password"
            android:icon="@mipmap/changepasssword"
            android:title="@string/change_password" />
        <item
            android:id="@+id/log_out"
            android:icon="@mipmap/shutdown"
            android:title="@string/log_out" />
    </group>
</menu>
