<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/view_day"
        android:layout_width="50dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/textview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_am"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/view_am"
        android:layout_width="wrap_content"
        android:layout_height="32dp"

        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/am"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_pm"
        app:layout_constraintStart_toEndOf="@+id/view_day"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/view_pm"
        android:layout_width="wrap_content"
        android:layout_height="32dp"

        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/pm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_nd"
        app:layout_constraintStart_toEndOf="@+id/view_am"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/view_nd"
        android:layout_width="wrap_content"
        android:layout_height="32dp"

        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/nd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_un"
        app:layout_constraintStart_toEndOf="@+id/view_pm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/view_un"
        android:layout_width="91dp"
        android:layout_height="32dp"
        android:enabled="false"
        android:layout_marginTop="16dp"
        android:text="@string/un_avai"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_nd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>