<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login_email_address"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_password"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_address"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="142dp"
        android:background="#22cc00"
        android:fontFamily="sans-serif"
        android:paddingLeft="18dp"
        android:paddingTop="0dp"
        android:paddingRight="18dp"
        android:paddingBottom="0dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" tools:targetApi="jelly_bean" />

</android.support.constraint.ConstraintLayout>