<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sign_up_enter_your_password"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/position_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_mob_no"
        tools:targetApi="o" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_purple"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


    <EditText
        android:id="@+id/signUp_mob_no"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sign_up_enter_your_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/signUp_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_employee_no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/signUp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name_spinner"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/company_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_spinner" />

    <Spinner
        android:id="@+id/position_spinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/company_name_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password" />

</android.support.constraint.ConstraintLayout>